--- a/index.html
+++ b/index.html
@@ -6,43 +6,49 @@
     <title>Cost of Higher Education</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Leaflet CSS -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin=""/> -->
+    crossorigin=""/>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
 </head>
 
 <body>
-<h1>Cost of Higher Education</h1>
-
-<div class="row">
-    <div class="col-md-8">
-        <!-- insert leaflet map here -->
-        <div id="map"></div>
-    </div>
-    <div class="row">
-        <div class="col-3 col-md-12">
-            <!-- insert demographic info chart.js here  -->
-        </div>
-        <div class="col-3 col-md-12">
-            <!-- insert cost plotly here  -->
+    <div class="container">
+        <div class="row">
+            <h1>Cost of Higher Education</h1>
         </div>
     </div>
 
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <!-- insert leaflet map here -->
+                <div id="map"></div>
+            </div>
+            <div class="row">
+                <div class="col-3 col-md-12">
+                    <!-- insert demographic info chart.js here  -->
+                </div>
+                <div class="col-3 col-md-12">
+                    <!-- insert cost plotly here  -->
+                </div>
+            </div>
+        </div>
+    </div>
 
-<!-- Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.js" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.js" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></script>
 
-<!-- Leaflet JS -->
-<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-    crossorigin=""></script>
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+        integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+        crossorigin=""></script>
 
-<!-- Mapbox API key -->
-<script type="text/javascript" src="static/config.js"></script>
+    <!-- Mapbox API key -->
+    <script type="text/javascript" src="static/config.js"></script>
 
-<script src="static/logic.js"></script>
+    <!-- Map JS -->
+    <script src="static/logic.js"></script>
 </body>
 </html>
